Adding redux, actions, reducers, async.

--- a/client/popup/authsuccess/index.html
+++ b/client/popup/authsuccess/index.html
@@ -5,7 +5,7 @@
 		<title></title>
 		<script>
             window.onload = function() {
-                window.opener.open('/', '_self');
+                window.opener.refreshUser();
                 window.opener.focus();
                 window.close();
             };
